# f1tenth_turtleship_ws

./: .gitignore  .gitmodules  HYPERPARAMETER.md  Makefile  README.md  index.html  map_converter.ipynb  researchNote.md  visualize_raceline.ipynb
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
.devcontainer/: Dockerfile  devcontainer.json
data/map/1121/: map.yaml
data/reference_path/1121/: opp_ref_path.csv
data/rviz/: mapping_rviz.rviz
docs/: index.css  index.html
outputs/: .gitignore
rviz/: racing.rviz
rviz_settings/: v1.rviz
script/: launch_controllers.sh  launch_simulator.sh
scripts/: base_system.sh  init.sh  mppi.sh  recalc_trj.sh  set_alias.sh  slam.sh
src/f1tenth_system/ackermann_mux/src/: ackermann_mux.cpp
src/grid_map/: README.md
src/grid_map/grid_map_cmake_helpers/: package.xml
src/joystick/: CMakeLists.txt  README.md  package.xml
src/joystick/include/joystick/: joystick.hpp
src/joystick/src/: joystick.cpp  joystick_node.cpp
src/local_costmap_generator/: CMakeLists.txt  README.md  package.xml
src/local_costmap_generator/config/: local_costmap_generator.yaml
src/local_costmap_generator/include/local_costmap_generator/: local_costmap_generator.hpp
src/local_costmap_generator/src/: local_costmap_generator.cpp  local_costmap_generator_node.cpp
src/mppi_controller/config/: mppi_controller.yaml
src/mppi_controller/include/mppi_controller/: mppi_controller_ros.hpp
src/mppi_planner/: CMakeLists.txt  README.md  package.xml
src/mppi_planner/config/: mppi_planner.yaml
src/mppi_planner/include/mppi_planner/: mppi.hpp  mppi_base.hpp  mppi_planner.hpp  mppi_planner_ros.hpp  mppi_template.hpp  mppi_types.hpp
src/mppi_planner/src/: mppi.cpp  mppi_base.cpp  mppi_planner.cpp  mppi_planner_node.cpp  mppi_planner_ros.cpp
src/pid_planner/: CMakeLists.txt  README.md  package.xml
src/pid_planner/include/pid_planner/: pid_planner.hpp
src/pid_planner/src/: pid_planner.cpp  pid_planner_node.cpp
src/proj-svg_mppi/data/map/B1_11.20/: map.yaml
src/proj-svg_mppi/data/reference_path/B1_11.20/: ego_ref_waypoint.csv
src/proj-svg_mppi/data/reference_path/lw/: opp_ref_path.csv
src/proj-svg_mppi/script/: launch_controllers.sh  launch_simulator.sh
src/proj-svg_mppi/src/local_costmap_generator/config/: local_costmap_generator_simulation.yaml
src/proj-svg_mppi/src/mppi_controller/config/: mppi_controller.yaml
src/proj-svg_mppi/src/mppi_controller/src/: mpc_base.cpp  mppi_controller_ros.cpp
src/proj-svg_mppi/src/reference_waypoint_loader/data/: reference_waypoint.csv
src/proj-svg_mppi/src/reference_waypoint_loader/launch/: reference_waypoint_loader.launch
src/race_stack/: =8.3.2
src/race_stack/base_system/f1tenth_simulator/node/: behavior_controller.cpp  simulator.cpp
src/race_stack/base_system/f1tenth_simulator/src/: ks_kinematics.cpp  std_kinematics.cpp
src/race_stack/base_system/f1tenth_system/scripts/: f110_start_slam.sh  f110_start_teleop.sh
src/race_stack/f110_utils/libs/ccma/: pyproject.toml
src/race_stack/planner/gb_optimizer/src/: global_planner_node.py  readwrite_global_waypoints.py
src/race_stack/stack_master/config/NUC2/: joy_teleop.yaml  sensors.yaml  vesc.yaml
src/race_stack/stack_master/config/gb_optimizer/: racecar_f110.ini
src/race_stack/stack_master/launch/: mapping.launch
src/race_stack/stack_master/maps/: .gitignore
src/race_stack/stack_master/maps/1201_1450/: 1201_1450.yaml
src/race_stack/stack_master/maps/1201_1453/: 1201_1453.pbstream  1201_1453.yaml  global_waypoints.csv
src/race_stack/stack_master/maps/B1_1124_1004/: B1_1124_1004.pbstream  B1_1124_1004.yaml  global_waypoints.csv  global_waypoints.json  ot_sectors.yaml  speed_scaling.yaml
src/race_stack/stack_master/maps/B1_1124_1106/: B1_1124_1106.pbstream  B1_1124_1106.yaml  global_waypoints.json
src/race_stack/stack_master/maps/B1_1126_v1/: B1_1126_v1.pbstream  B1_1126_v1.yaml  global_waypoints.csv
src/race_stack/stack_master/maps/B1_1126_v2/: global_waypoints.csv
src/race_stack/stack_master/maps/B1_1126_v2_1/: B1_1126_v2.pbstream  global_waypoints.csv
src/race_stack/stack_master/maps/B1_1126_v2_2/: B1_1126_v2.yaml  global_waypoints.csv
src/race_stack/stack_master/maps/JJ_1201_0223/: JJ_1201_0223.pbstream  JJ_1201_0223.yaml  global_waypoints.csv
src/race_stack/stack_master/maps/JJ_1201_1332/: JJ_1201_1332.pbstream  (+2 more)
src/race_stack/system_identification/id_analyser/: analyse_motor_rpm.py
src/race_stack/system_identification/on_track_sys_id/: CMakeLists.txt  package.xml  setup.py
src/race_stack/system_identification/on_track_sys_id/models/NUC2/: NUC2_pacejka.txt
src/race_stack/system_identification/on_track_sys_id/models/NUC5/: NUC5_pacejka.txt
src/race_stack/system_identification/on_track_sys_id/models/NUC6/: NUC6_pacejka.txt
src/race_stack/system_identification/on_track_sys_id/models/SIM/: SIM_pacejka.txt
src/race_stack/system_identification/on_track_sys_id/params/: pacejka_params.yaml
src/race_stack/system_identification/on_track_sys_id/src/helpers/: generate_predictions.py  load_model.py  pacejka_formula.py  plot_results.py  save_model.py  solve_pacejka.py  train_model.py
src/reference_sdf_generator/config/: reference_sdf_generator.yaml
src/reference_waypoint_loader/data/: reference_waypoint.csv
src/reference_waypoint_loader/include/reference_waypoint_loader/: reference_waypoint_loader.hpp
src/reference_waypoint_loader/launch/: reference_waypoint_loader.launch
src/reference_waypoint_loader/src/: reference_waypoint_loader.cpp
src/rs/base_system/f1tenth_system/: README.md
src/rs/system_identification/on_track_sys_id/: README.md
src/simulator/maps/: map.yaml
src/simulator/maps/backups/: B1_11.20.yaml
src/svg_mppi_planner/: CMakeLists.txt  README.md  package.xml
src/svg_mppi_planner/include/svg_mppi_planner/: common.hpp  sampling.hpp  svg_mppi.hpp  svg_mppi_planner_ros.hpp
src/svg_mppi_planner/src/: rm-it-ref.cpp  sampling.cpp  svg_mppi.cpp  svg_mppi_planner_node.cpp  svg_mppi_planner_ros.cpp
src/urg_node2/config/: params_ether.yaml  params_ether_2nd.yaml
(+88 files in other folders)
