<?xml version="1.0"?>
<package format="2">
  <name>on_track_sys_id</name>
  <version>0.1.0</version>
  <description>The on_track_sys_id package</description>

  <maintainer email="odikici@ethz.ch">Onur Dikici</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>rospkg</depend>

  <export>  </export>
</package>
